<resources>
    <string name="app_name">StreamVerse</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="stream_verse_home_fragment_label">Stream Verse Home Fragment</string>
    <string name="preview_fragment_label">Preview Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="downloads">Downloads</string>
    <string name="more">More</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="my_list">My List</string>
    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="more_like_this">MORE LIKE THIS</string>
    <string name="cast_type">%1$s : </string>
    <string name="director">Director : %1$s</string>
    <string name="writer">Writer : %1$s</string>
    <string name="starring">Starring : %1$s</string>
    <string name="genres">Genres : %1$s</string>
    <string name="speaker">speaker</string>
    <string name="mute">mute</string>
    <string name="lock">Lock</string>
    <string name="audio_subtitles"><![CDATA[Audio & Subtitles]]></string>
    <string name="portrait">Portrait</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="tap_to_unlock">Tap to Unlock</string>
    <string name="preview">Preview</string>
    <string name="u_a_16">U/A : 16+</string>
    <string name="_2021">2021</string>
    <string name="added_to_my_list">Added to My List</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="removed_from_my_list">Removed from My List</string>
    <string name="remove_from_my_list">Remove from My List</string>
    <string name="like">Like</string>
    <string name="check_out_link">Check out this link</string>
    <string name="seen_on_streamverse">Seen %1$s on StreamVerse yet? \n \n  %2$s</string>
    <string name="share_link_via">Share link via</string>
    <string name="download_not_supported">Download not supported for now</string>
    <string name="stream_verse_home_fragment">StreamVerseHome Fragment</string>
    <string name="preview_fragment">Preview Fragment</string>
    <string name="other_menu_fragment">OtherMenu Fragment </string>
    <string name="implement_screen_functionality">The %1$s feature is currently unavailable but will be supported in the near future. Please stay tuned for updates.</string>
</resources>