<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/comingSoon"
        android:title="@string/coming_soon"
        android:icon="@drawable/ic_launcher_foreground"/>

    <item
        android:id="@+id/downloads"
        android:title="@string/downloads"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:icon="@drawable/ic_launcher_foreground"/>

</menu>
