<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:keepScreenOn="true"
        tools:context=".streamversepreview.PreviewFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/videoPreviewLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintBottom_toTopOf="@id/previewInfoDetailLayout">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/videoPlayer"
                app:use_controller="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resize_mode="fill"/>

            <ImageView
                android:id="@+id/imageThumbnail"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.ab.streamverse.util.CustomPlayerControlView
                android:id="@+id/custom_control_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/previewInfoDetailLayout"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="@id/guideLine"
            app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/videoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/videoYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2021"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videoName" />

            <TextView
                android:id="@+id/certificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/u_a_16"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:backgroundTint="@color/grey"
                android:background="@drawable/ic_rectangular_border"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@id/videoYear"
                app:layout_constraintTop_toBottomOf="@id/videoName" />

            <TextView
                android:id="@+id/videoDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2h 3m"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@id/certificate"
                app:layout_constraintTop_toBottomOf="@id/videoName" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoBarrier"
                app:constraint_referenced_ids="videoYear,videoDuration,certificate"
                app:barrierDirection="bottom" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textAllCaps="false"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_play_button"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/videoBarrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/play" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/downloadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:backgroundTint="@color/white"
                app:icon="@drawable/download"
                app:iconTint="@color/white"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/playButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/download"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:backgroundTint="@color/grey" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/movieDetailLayout"
            app:layout_constraintBottom_toBottomOf="@id/previewInfoDetailLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/videoInfoDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/videoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <TextView
                android:id="@+id/director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/videoDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/writer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/director"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/starring"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/starring"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/writer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/starring"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/videoOptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videoInfoDetail">

            <ImageView
                android:id="@+id/icPlusIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"
                android:contentDescription="@string/add_to_my_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addToMyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_list"
                android:textColor="@color/silverChaliceGrey"
                android:drawablePadding="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/icPlusIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rate" />


            <ImageView
                android:id="@+id/icRateIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rate"
                android:padding="4dp"
                android:contentDescription="@string/rate"
                app:layout_constraintStart_toEndOf="@id/addToMyList"
                app:layout_constraintEnd_toStartOf="@id/share"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/silverChaliceGrey"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/addToMyList"
                app:layout_constraintEnd_toStartOf="@id/share"
                app:layout_constraintTop_toBottomOf="@id/icRateIcon" />

            <ImageView
                android:id="@+id/icShareIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:padding="4dp"
                app:layout_constraintStart_toEndOf="@id/rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/silverChaliceGrey"
                android:drawablePadding="0dp"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icShareIcon" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recommendedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/videoOptionLayout">

            <TextView
                android:id="@+id/moreLikeThis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_like_this"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedList"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/moreLikeThis"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>