<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StreamVerseHomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:src="@drawable/app_title_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvShows"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_shows"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/appLogo"
                app:layout_constraintEnd_toStartOf="@id/movies"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />


            <TextView
                android:id="@+id/movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/tvShows"
                app:layout_constraintEnd_toStartOf="@id/myList"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />

            <TextView
                android:id="@+id/myList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_list"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topHeaderLayout"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tabLayout" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tabGravity="center"
                    app:tabIndicator="@null"
                    app:tabMode="fixed"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recentRecyclerView"
                    app:tabBackground="@drawable/tab_selector"
                    android:layout_weight="1"
                    app:tabPaddingStart="6dp"
                    app:tabPaddingEnd="6dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/streamCategoryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tabLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>