<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".StreamVerseHomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvShows"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_shows"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/appLogo"
                app:layout_constraintEnd_toStartOf="@id/movies"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />


            <TextView
                android:id="@+id/movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/tvShows"
                app:layout_constraintEnd_toStartOf="@id/myList"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />

            <TextView
                android:id="@+id/myList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_list"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/appLogo"
                app:layout_constraintBottom_toBottomOf="@id/appLogo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topHeaderLayout"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewPagerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topHeaderLayout"
            app:layout_constraintBottom_toTopOf="@id/guideLine">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />


<!--            <com.google.android.material.tabs.TabLayout-->
<!--                android:id="@+id/tabLayout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                app:tabGravity="center"-->
<!--                app:tabIndicator="@null"-->
<!--                app:tabPaddingStart="6dp"-->
<!--                app:tabPaddingEnd="6dp"-->
<!--                app:tabBackground="@drawable/tab_selector"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/viewPager" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="center"
            app:tabIndicator="@null"
            app:tabMode="fixed"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/viewPagerLayout"
            app:tabBackground="@drawable/tab_selector" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/streamCategoryList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>